@@ -1,5 +1,6 @@
 Revision history for App::MCP::Worker
 
+          - Moved user_name attribute to ClientAuth
           - Update dependency version
           - Toolchain update
           - Switched to lexical subs
